[project]
name = "dsplib"
version = "0.10.1"
authors = [
    {name = "Alexander Rodionov", email = "tandav@tandav.me"},
]
description = "A set of tools for DSP projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "pytest",
]
numpy = [
    "numpy>=1.15.0",
]

[project.urls]
source = "https://github.com/tandav/dsplib"
# docs = "https://tandav.github.io/dsplib/"
issues = "https://github.com/tandav/dsplib/issues"
"release notes" = "https://github.com/tandav/dsplib/releases"

# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ==============================================================================

[tool.bumpver]
current_version = "v0.10.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"dsplib/__init__.py" = [
    "^__version__ = '{pep440_version}'",
]

# ==============================================================================

[tool.mypy]
# todo: review this
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================

[tool.ruff.lint]
extend-select = [
    "W",
    "C",
    "I",
    "SIM",
    "TCH",
    "C4",
    "S",
    "BLE",
    "B",
    "T10",
    "INP",
    "PIE",
    "PL",
    "RUF",
]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name
    "PLR0913",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true

# ==============================================================================

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint.BASIC]
good-names = ["v", "x", "l", "q", "a", "b", "n"]

[tool.pylint.messages-control]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "line-too-long",
    "import-outside-toplevel",
    "unused-variable",
    "too-many-arguments",
    "import-error",
    "duplicate-code",
]

[tool.pylint-per-file-ignores]
"/tests/" = "redefined-outer-name"


# ==============================================================================

[tool.autopep8]
ignore="E501,E701"
recursive = true
aggressive = 3

# ==============================================================================

[tool.flake8]
ignore = [
    'E501',
    'E741',
]

# ==============================================================================

[tool.pyright]
venvPath = "/Users/tandav/.cache/virtualenvs"
venv = "dsplib"

# ==============================================================================
