[metadata]
name = dsptool
version = 0.4.14
description = A set of tools for DSP projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/dsptool
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests*
